--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eliminate-text-between",
-	"version": "0.0.1",
+	"version": "0.0.2-dev.0",
 	"description": "",
 	"main": "source/index.js",
 	"bin": {
