--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"eliminate-text-between": "./source/index.js"
 	},
 	"scripts": {
-		"prepare": "npm run test --silent",
-		"test": "rimraf test.dist.txt && ncp test.txt test.dist.txt && node source/index.js '//<nope>' '//</nope>' test.dist.txt"
+		"prepare": "run-s clean compile test",
+		"clean": "rimraf dist test.dist.txt",
+		"compile": "babel source --out-dir dist --presets @babel/preset-env",
+		"test": "ncp test.txt test.dist.txt && node source/index.js '//<nope>' '//</nope>' test.dist.txt"
 	},
 	"files": [
 		"source"
@@ -22,7 +24,11 @@
 		"glob": "^7.1.3"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.4.0",
+		"@babel/preset-env": "^7.4.2",
 		"ncp": "^2.0.0",
+		"npm-run-all": "^4.1.5",
 		"rimraf": "^2.6.3"
 	}
 }
